# bare-metal-webrtc

./: .gitignore  .gitmodules  Makefile
codegen/: errors.go
codegen/templates/: errors.cpp.tmpl  errors.go.tmpl  errors.h.tmpl
win-capture-native/: BUILD.md  CMakeLists.txt  CMakePresets.json  README.md  errors.json  vcpkg.json
win-capture-native/cmake/: clang.cmake
win-capture-native/include/: capture.h  errors.h  types.h
win-capture-native/include/internal/: capturer.hpp  capturer_fabric.hpp  config.hpp  encoder.hpp
win-capture-native/include/internal/buffers/: captured_buffer.hpp  encoded_buffer.hpp
win-capture-native/include/internal/config-nodes/: general.hpp  x264.hpp
win-capture-native/include/internal/encoders/: encoder_x264.hpp
win-capture-native/include/internal/utils/: scope_exit.hpp  timer.hpp
win-capture-native/src/: capture.cpp  errors.cpp
win-capture-native/src/internal/: capturer.cpp  capturer_fabric.cpp
win-capture-native/src/internal/buffers/: captured_buffer.cpp
win-capture-native/src/internal/encoders/: encoder_x264.cpp
win-capture-native/tests/: CMakeLists.txt  smoke_config.yaml  smoke_test.cpp
win-streamer-go/: go.mod
win-streamer-go/internal/: capture_bridge.go  capture_error.go
